--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,4 +29,4 @@ services:
 #     - "traefik.expose=true"
 ## Use some variant or this exact command to spin up your Traefik reverse proxy network: `docker network create -d bridge --subnet=10.5.0.10/16 traefik`
 #networks:
-#  - traefik
+#  traefik:
